# qnp2fond

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: blocks04.qnp  blocks04_d.pddl  blocks04_fond_3_0_d.pddl  blocks04_fond_3_0_p.pddl  blocks04_fond_3_2_d.pddl  blocks04_fond_3_2_p.pddl  blocks04_fond_d.pddl  blocks04_fond_p.pddl  blocks04_p.pddl  grid.qnp  grid_d.pddl  grid_fond_3_0_d.pddl  grid_fond_3_0_p.pddl  grid_fond_3_2_d.pddl  grid_fond_3_2_p.pddl  grid_fond_d.pddl  grid_fond_p.pddl  gripper04_5_10.qnp  gripper04_5_10_d.pddl  gripper04_5_10_p.pddl  gripper04_fond_3_0_d.pddl  gripper04_fond_3_0_p.pddl  gripper04_fond_3_2_d.pddl  gripper04_fond_3_2_p.pddl
examples/ecai20-talk/gripper/: gripper.qnp  gripper_d.pddl
examples/ecai20-talk/rewards/: rewards.qnp  rewards_d.pddl  rewards_p.pddl
examples/old-reduction/: blocks04_fond_3_2_p.pddl  grid_fond_3_2_p.pddl  gripper04_5_10_fond_3_0_p.pddl  gripper04_5_10_fond_3_2_d.pddl  gripper04_5_10_fond_3_2_p.pddl
examples/other/: blocks04_d.pddl  blocks04_p.pddl  grid_d.pddl  grid_p.pddl  gripper04_5_10.qnp  gripper04_5_10_d.pddl  gripper04_5_10_p.pddl
examples/qnp-paper/blocks_clear/: blocks_clear.qnp  blocks_clear_d.pddl  blocks_clear_p.pddl
examples/qnp-paper/blocks_on/: blocks_on_d.pddl  blocks_on_p.pddl
examples/qnp-paper/delivery/: delivery.qnp  delivery2.qnp  delivery2_d.pddl  delivery_d.pddl  delivery_p.pddl
jair-qnp-paper/blocks_on/: blocks_on.qnp
jair-qnp-paper/delivery/: delivery.qnp
jair-qnp-paper/synthetic/: q2.qnp  q3.qnp
src/: action.h  basic.h  blocks04.qnp  feature.h  fond.h  main.cc  makefile  problem.h  qnp.h  translation.h  utils.h
(+8 files in other folders)
